--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -18,14 +18,12 @@
         "idle_inhibitor",
         "pulseaudio",
         "network",
-        "power-profiles-daemon",
         "cpu",
         "memory",
         "temperature",
         "backlight",
         "keyboard-state",
         "battery",
-        "battery#bat2",
         "clock",
         "tray",
         "custom/power"
@@ -195,8 +193,7 @@
     "custom/power": {
         "format" : "⏻ ",
 		"tooltip": false,
-		"menu": "on-click",
-		"menu-file": "$HOME/.config/waybar/power_menu.xml", // Menu file in resources folder
+		"menu": "fuzzel",
 		"menu-actions": {
 			"shutdown": "shutdown",
 			"reboot": "reboot",
