--- a/.config/starship/starship.toml
+++ b/.config/starship/starship.toml
@@ -92,6 +92,11 @@ symbol = ""
 style = "bg:color_blue"
 format = "[[ $symbol( $version) ](fg:color_fg0 bg:color_blue)]($style)"
 
+[rust]
+symbol = ""
+style = "bg:color_blue"
+format = "[[ $symbol( $version) ](fg:color_fg0 bg:color_blue)]($style)"
+
 [docker_context]
 symbol = ""
 style = "bg:color_bg3"
